<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rate My Sunrise</string>
    <string name="app_desc">Partagez vos plus beaux couchers et levers de soleil, où que vous soyez !</string>
    <string name="developed_by">Developpe par EL OUARIEGHLI Mourad et TRAN Albert</string>
    <string name="touch_continue">Touchez l\'écran pour continuer...</string>
    <string name="bt_search">Go!</string>
    <string name="hint_search">Rechercher ville/pays</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
