<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/home_layout"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/home_bg"
    tools:context=".HomeActivity">

    <TextView
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:text="@string/app_desc"
        android:textColor="#bebebe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

   <!-- <TextView
        android:text="@string/developed_by"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:gravity="center"
        /> -->


    <TextView
        android:text="@string/touch_continue"
        android:textColor="#bebebe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"/>

</LinearLayout>
